On branch WorkInProgress Changes to be committed: 	modified:   ToDo.txt
Changes not staged for commit:
	deleted:    datacrawing/ibkrData.py
	deleted:    datacrawing/yfinData.py
	deleted:    datacrawing/yfinData_backup.py

Untracked files:
	dataget/

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -10,6 +10,6 @@ X Make proper interactive watchlist
 
 
 General Coding
-X Convert algo into a git project
+O Convert algo into a git project
 X Build suitable environment for C++
 ? Migrate all calculations to C++
