Changes to be committed: 	modified:   .gitignore for passcodes 	modified:   ToDo.txt 	new file:   fundamentals/FedFundsRate.py         fetch fed funds rate automatically 	new file:   fundamentals/riskFreeRate.py         fetch 3mo T-bill yields automatically 	new file:   fundamentals/risk_free_rate         Saves the rate locally so you don't download it everytime the function is called

--- a/ToDo.txt
+++ b/ToDo.txt
@@ -3,7 +3,7 @@ Algo Trading
 X Finish tradingview-styled charting tool
 X Finish automatic Kelly Criterion Calculator
 X Finish Black-Scholes Calculator
-    
+    O create automatic fether for risk-free rate (3month T-bill)
 X Make IBKR data Crawler (now renamed to dataget)
 X Integrate IBKR and Yahoo Finance datacralwer compatibility
 X Make gapfill technical indicator
